--- a/style.css
+++ b/style.css
@@ -56,21 +56,26 @@ option:empty {
   position: absolute;
   /* margin-top: 100px; */
   background-color: white;
-  /* height: 500px;
-  width: 600px;
-  align-items: center; */
   margin: 0 auto;
-  width: 90%;
-  /* border: 3px solid #73ad21; */
-  /* padding: 10px; */
+  width: 100%;
+  min-height: 400px;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .info h1 {
   padding: 10px;
 }
 
-.info p {
+.infoitem {
+  width: 60%;
   padding: 10px;
+  text-align: center;
+  margin-top: 7em;
 }
 
 .info circle {
@@ -78,9 +83,46 @@ option:empty {
   stroke-width: 3px;
 }
 
+.info svg {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+}
+
 .filter {
   width: "500px";
   margin: auto;
   text-align: center;
   padding: 0.5em;
+}
+
+#close {
+  text-align: right;
+  padding: 1em;
+}
+
+#example {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  width: 35%;
+  text-align: right;
+}
+
+.card {
+  display: flex;
+  border-style: solid;
+  border-width: 1px;
+  padding: 1em;
+  flex-direction: column;
+  align-items: center;
+  margin: 1em;
+  border-radius: 25px;
+  width: 30%;
+  text-align: center;
+  max-height: 30%;
+}
+
+text.name {
+  cursor: pointer;
 }
