--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   padding: 0;
 }
 body {
-  font-family: "Calibri", Arial, Helvetica, sans-serif;
+  font-family: "Calibri", "Open Sans", sans-serif;
   font-weight: lighter;
 }
 header {
@@ -17,10 +17,12 @@ header {
 h1 {
   margin-top: 0;
   text-align: center;
+  font-weight: 300;
 }
 
 h2 {
   text-align: center;
+  font-weight: 300;
 }
 
 select {
