--- a/style.css
+++ b/style.css
@@ -19,10 +19,10 @@ body {
 }
 header {
   background-color: #f8f4e8;
-  padding: 1em;
-  /* display: flex;
+  padding: 4em;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-evenly; */
 }
 
 h1 {
@@ -40,32 +40,34 @@ h2 {
 
 select {
   margin: auto;
+  background: url(images/dropdown.svg) no-repeat 95% 50%;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  /* and then whatever styles you want*/
+  /* height: 30px;
+  width: 100px; */
+  padding: 0.5em;
+  padding-right: 2.5em;
+  filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.161));
+  border-radius: 25px;
+  border: none;
+  color: #ffffff;
+  font-weight: lighter;
+  letter-spacing: 1.1px;
+  font-family: "Calibri", "Open Sans", sans-serif;
 }
 
 #selectButton {
   background-color: rgba(226, 149, 182, 1);
-  filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.161));
-  border-radius: 25px;
-  border: none;
-  padding: 0.5em;
-  color: #ffffff;
-  font-weight: lighter;
-  letter-spacing: 1.1px;
-  font-family: "Calibri", "Open Sans", sans-serif;
-  -webkit-appearance: none;
 }
 
 #selectCat {
   background-color: rgba(193, 193, 193, 1);
-  filter: drop-shadow(0px 3px 6px rgba(0, 0, 0, 0.161));
-  border-radius: 25px;
-  border: none;
-  padding: 0.5em;
-  color: #ffffff;
-  font-weight: lighter;
-  letter-spacing: 1.1px;
-  font-family: "Calibri", "Open Sans", sans-serif;
-  -webkit-appearance: none;
+}
+
+#arrow {
+  fill: orange;
 }
 
 .button {
